--- a/_posts/2022-12-29-photo10.md
+++ b/_posts/2022-12-29-photo10.md
@@ -248,6 +248,22 @@ True to form, these ones were on a golf course.
 
 Here are some more Black-Billed Magpies, which are more common than crows in Denver. One of these had an injured wing that didn't fold correctly.
 
+![geese](/assets/images/posts/denver-geese.jpg)
+
+There were a ridiculous amount of Canada Geese in Denver. These are enjoying a small unfrozen patch in the middle of a frozen lake.
+
+![red-tailed](/assets/images/posts/denver-hawk-1.jpg)
+
+This Red-Tailed Hawk was sitting on a light post in a park and let us get very close. You can see the geese flying in the background.
+
+![red-tailed-2](/assets/images/posts/denver-hawk-2.jpg)
+
+She's so pretty!
+
+![denver-gulls](/assets/images/posts/denver-gulls.jpg)
+
+Here's a Common Merganser (second from left) with a few Ring-Billed Gulls. They were also in the middle of the frozen lake, so I wasn't able to get very close.
+
 ![cinereous](/assets/images/posts/cinereous-1.jpg)
 
 This is a Cinereous Vulture that was in the Denver Zoo. At up to 14 kg (31 lbs), they're the largest of the Old World vultures. This one seemed to have a wing problem but didn't let that stop him from lurching around enthusiastically and futzing with sticks.
@@ -267,6 +283,18 @@ The Denver Zoo had lots of cranes, including this Sarus Crane, hailing from Indi
 ![crane-2](/assets/images/posts/zoo-crane-2.jpg)
 
 This is a Red-Crowned Crane, the type you see in medieval Japanese art.
+
+![penguin-1](/assets/images/posts/penguin-2.jpg)
+
+It was molting season for these African Penguins, so some of them looked extremely ratty. Penguins molt catastrophically, losing all their feathers at once, while most flighted birds molt sequentially, losing feathers symmetrically and one at a time in order to remain flighted.
+
+![penguin-2](/assets/images/posts/penguin-1.jpg)
+
+This penguin was the most ratty-looking and also the most hungry. He ate like 10 enormous fish back to back.
+
+![penguin-3](/assets/images/posts/penguin-3.jpg)
+
+This penguin appeared to have special needs. He was just standing there, staring blankly while the rest were fed fish.
 
 ![eagle](/assets/images/posts/bald-eagle.jpg)
 
@@ -306,3 +334,18 @@ This is a white-tailed deer whose antlers are just beginning to poke out.
 
 Just in case you were curious what you can see at the Denver Zoo, here are some of the mammals on exhibit.
 
+![bongo](/assets/images/posts/bongo.jpg)
+
+This is a bongo, a type of African antelope.
+
+![mountain-goat](/assets/images/posts/mountain-goat.jpg)
+
+This is a Rocky Mountain goat. I didn't know we had goats like this here!
+
+![lion-1](/assets/images/posts/lion-1.jpg)
+
+There were two big male lions at the zoo, who were brothers. This one was making a funny face.
+
+![lion-2](/assets/images/posts/lion-2.jpg)
+
+You can tell how cold it is from his breath!
