--- a/_posts/2022-12-29-photo10.md
+++ b/_posts/2022-12-29-photo10.md
@@ -36,7 +36,7 @@ This is a Cattle Egret, so called because they are often found on or near cows, 
 
 ![black-crowned](/assets/images/posts/black-crowned.jpg)
 
-This is a Black-Crowned Night Heron. These are quite common in California, but I've only been able to get bad pictures of them so far because they're very secretive and most active at night. This one has a fish in his bill!
+This is a Black-Crowned Night Heron. These are quite common in California, but I've only been able to get bad pictures of them so far because they're very secretive and most active at night.
 
 ![black-crowned-2](/assets/images/posts/black-crowned-2.jpg)
 
@@ -82,11 +82,11 @@ This is a Glossy Ibis, a smaller and less common relative of the White Ibis. Ibi
 
 This ibis-like bird is a Wood Stork. It's much larger and has an ugly, vulture-like bald head. It's the only North American stork.
 
-![woodstork-2](/assets/images/posts/woodstork-2/jpg)
+![woodstork-2](/assets/images/posts/woodstork-2.JPG)
 
 His head is shaped and colored very similarly to a tree branch. Maybe that's on purpose?
 
-![kingfisher](/assets/images/posts/kingfisher.jpg)
+![kingfisher](/assets/images/posts/kingfisher-1.jpg)
 
 This is the first photo I've ever been able to get of any kind of kingfisher, in this case a Belted Kingfisher. He made distinctive noises while flying, and often perched on prominent branches, but never got very close. (It's a bad idea to stray from the path here for fear of encountering alligators.)
 
@@ -172,9 +172,9 @@ Like last time, I was unable to get any good pictures of a Black Vulture.
 
 ### Waterbirds I've Seen Before
 
-![yellowlegs](/assets/images/posts/greater-yellowlegs-florida.jpg)
+![yellowlegs](/assets/images/posts/yellowlegs-and-blue.jpg)
 
-This is a Greater Yellowlegs, which I've seen before in California. He was standing calmly quite close to us when he thought we weren't looking at him, but as soon as we turned to face him he flushed.
+Here's a Greater Yellowlegs walking near a Little Blue Heron.
 
 ![anhinga](/assets/images/posts/anhinga-3.jpg)
 
@@ -206,21 +206,13 @@ Here's another example of Florida's species diversity: two Great Egrets, an Anhi
 
 ![great-and-little](/assets/images/posts/great-and-little.jpg)
 
-Here's a Great Blue Heron and a Little Blue Heron together, demonstrating the size difference between Great and Little.
-
-![great-blue](/assets/images/posts/great-blue-florida.jpg)
-
-The Great Blue Heron is in the same genus as the Great Egret. This means that the term "egret" and "heron" aren't taxonomically meaningful. It seems that it refers to the color, with white birds being named egrets and non-white birds being named herons.
+Here's a Great Blue Heron and a Little Blue Heron together, demonstrating the size difference between Great and Little. The Great Blue Heron is in the same genus as the Great Egret. This means that the term "egret" and "heron" aren't taxonomically meaningful. It seems that it refers to the color, with white birds being named egrets and non-white birds being named herons.
 
 ![great-and-blue](/assets/images/posts/great-and-blue.jpg)
 
-Here's a Great Egret and a Great Blue Egret foraging near each other. The Great Egret has a fish in his mouth! It seemed like this area was extremely rich in fish, since many birds had them in their beaks.
+Here's a Great Egret and a Great Blue Heron foraging near each other. The Great Egret has a fish in his mouth! It seemed like this area was extremely rich in fish, since many birds had them in their beaks.
 
-![yellowlegs](/assets/images/posts/yellowlegs-and-blue.jpg)
-
-Here's a Greater Yellowlegs walking near a Little Blue Heron.
-
-![pied-billed](/assets/images/posts/pied-billed-florida.jpg)
+![pied-billed](/assets/images/posts/florida-grebe.jpg)
 
 This is a Pied-Billed Grebe, which is in the samre family as flamingos. They have many silly colloquial names, including dabchick, hell-diver, and water witch. Does it look witchy to you?
 
@@ -244,7 +236,7 @@ In Denver, they had the red-shafted variety of Northern Flicker.
 
 True to form, these ones were on a golf course.
 
-![magpies](/assets/images/posts/magpies.jpg)
+![magpies](/assets/images/posts/magpies-2.jpg)
 
 Here are some more Black-Billed Magpies, which are more common than crows in Denver. One of these had an injured wing that didn't fold correctly.
 
@@ -272,7 +264,7 @@ This is a Cinereous Vulture that was in the Denver Zoo. At up to 14 kg (31 lbs),
 
 This Cinereous Vulture was in a different enclosure than the other two for some reason. It looks quite majestic and more like an eagle than a stereotypical vulture.
 
-![lorikeet](/assets/images/posts/lorikeet.jpg)
+![lorikeet](/assets/images/posts/rainbow-lorikeet.jpg)
 
 This is a Rainbow Lorikeet, a small Australian parrot that does not make a very good pet. Its excrement is liquid and apparently just gets *everywhere*.
 
@@ -296,7 +288,7 @@ This penguin was the most ratty-looking and also the most hungry. He ate like 10
 
 This penguin appeared to have special needs. He was just standing there, staring blankly while the rest were fed fish.
 
-![eagle](/assets/images/posts/bald-eagle.jpg)
+![eagle](/assets/images/posts/zoo-eagle.jpg)
 
 I still haven't seen any Bald Eagles in the wild, even though they're supposedly common.
 
@@ -318,7 +310,7 @@ This is a three or four-foot-long baby alligator. The babies have yellow stripes
 
 This is a feral pig, which are invasive descendants of domestic pigs. They are very smart and cute though!
 
-[piglets](/assets/images/posts/piglets.jpg)
+![piglets](/assets/images/posts/piglets.jpg)
 
 These are feral piglets! They were staying together in a clump and not mingling with the adults. They look so soft!
 
@@ -326,7 +318,7 @@ These are feral piglets! They were staying together in a clump and not mingling 
 
 The nature preserve was also home to these "Cracker Cattle", a breed not normally eaten or milked anymore. Even the lady cows had impressive horns. Most cows' horns were cropped on the ends to keep them from injuring each other. The bull's horns were super cropped.
 
-![deer](/assets/images/posts/whitetail.jpg)
+![deer](/assets/images/posts/white-tailed.jpg)
 
 This is a white-tailed deer whose antlers are just beginning to poke out.
 
