--- a/_posts/2022-12-29-photo10.md
+++ b/_posts/2022-12-29-photo10.md
@@ -82,7 +82,7 @@ This is a Glossy Ibis, a smaller and less common relative of the White Ibis. Ibi
 
 This ibis-like bird is a Wood Stork. It's much larger and has an ugly, vulture-like bald head. It's the only North American stork.
 
-![woodstork-2](/assets/images/posts/woodstork-2.JPG)
+![woodstork-2](/assets/images/posts/woodstork-2.jpg)
 
 His head is shaped and colored very similarly to a tree branch. Maybe that's on purpose?
 
