--- a/_posts/2021-02-24-creative.md
+++ b/_posts/2021-02-24-creative.md
@@ -98,7 +98,7 @@ Uriel helpfully displayed a calendar on the bulkhead.  "It's Friday, August 15, 
 
 I sighed, not that I was expecting a different answer.  From what I could see out the windows of our little spaceship, it seemed like Uriel's end goal was to stay in orbit around the sun, in between Earth and Mars.  At least, the sun appeared a bit smaller than I remembered, and thankfully it didn't seem to be shrinking further.
 
-I finished my coffee replaced the empty dishware in the dumbwaiter, where it quickly rose out of sight to be washed.  I stood up and pulled on my overalls, and then my socks and boots, just as I'd done every day back on Earth.  I admit, my life aboard this weird little spaceship is not that qualitatively different than it was at home.  Just the scenery had changed, the food was better (and I didn't have to make it or clean up), and the sense of nihilism was stronger.
+I finished my coffee and replaced the empty dishware in the dumbwaiter, where it quickly rose out of sight to be washed.  I stood up and pulled on my overalls, and then my socks and boots, just as I'd done every day back on Earth.  I admit, my life aboard this weird little spaceship is not that qualitatively different than it was at home.  Just the scenery had changed, the food was better (and I didn't have to make it or clean up), and the sense of nihilism was stronger.
 
 I went out of my bedroom and into the pasture, a large field hosting a diverse assortment of wild grasses.  It was lit by a rather incongruous-looking glass chandelier, which during the "day" was too bright to look at, but which moved on a linear rail across the ceiling and modulated its brightness to create, I admit, a rather convincing effect.  I entered a small area fenced off by chicken wire, and began the work of moving the chickens.  First I collected all the eggs and put them in a basket outside of the fence.  Then I had to herd all the birds back into their mobile hutch, which was sometimes frustrating but today was relatively easy, and then I rolled up the fence and threw it on top of the hutch before dragging the whole thing into a new patch of grass and erecting the fence again.  Last night I'd moved the cows out of this area, so now it was the chickens' turn to pick maggots out of the manure and fertilize the grazed area to promote regrowth.  Yes, there are innumerable maggots, eight chickens, and two cows on board my spaceship.  All the cows and chickens are female; sometimes Uriel artificially inseminates one of them, though I've never seen him do it.  I'm sure if I were any other type of abductee, Uriel could figure out how to do all this labor himself, or maybe he'd've set up the ship to produce lab-grown meat and cheese out of interplanetary dust and cut out all the middlemen.  As it is though, the daily movement of the animals and the feeling of being "outside" with the "sun" on my back is the only thing keeping me from slipping into existential despair.  I'm sure that's by design.
 
@@ -120,6 +120,6 @@ Also, I do want to return to Earth someday, and I do want humanity to survive an
 
 - New molecular data suggest that the enigmatic extinct bird group known as parrots are not as closely related to us as previously thought.  This research recovers the parrot family as being the sister clade to Passeriformes, rather than within Passeriformes, indicating that higher intelligence and symbolic language evolved independently in both groups.  This has interesting implications as to how our ancestors interacted with parrots when they coexisted.  How did the difference in brain structure influence development and learning?  Was it truly competition with ancient corvids that drove parrots to extinction, or were they more specialized and therefore more vulnerable to climate change?
 
-- An extinction previously hidden in the fossil record comes to light with the discovery of abundant black shales approximately 385 years of age, coinciding approximately with the theoretic emergence of tetrapods.  Perhaps this extinction wiped out land arthropod groups that previously would've competed with early tetrapods, and allowed the latter to colonize the land to fill the newly emptied niches.  If further research finds this extinction is large enough to be on the same level as the Big Five mass extinctions, it may prompt the renaming of the Fifth Mass Extinction (10 Ma) to the Sixth, and the Big Five to the Big Six.  We expect the public to resist this name change.
+- An extinction previously hidden in the fossil record comes to light with the discovery of abundant black shales approximately 385 million years of age, coinciding approximately with the theoretic emergence of tetrapods.  Perhaps this extinction wiped out land arthropod groups that previously would've competed with early tetrapods, and allowed the latter to colonize the land to fill the newly emptied niches.  If further research finds this extinction is large enough to be on the same level as the Big Five mass extinctions, it may prompt the renaming of the Fifth Mass Extinction (10 Ma) to the Sixth, and the Big Five to the Big Six.  We expect the public to resist this name change.
 
 - There has been some progress decoding human digital image formats.  The lack of ultraviolet in all such decoded images is most likely a property of the original images, given what we know about primate trichromatic vision, but it's possible that it is an artifact of our decoding method.  Many of the decoded images depict scenes of human family groups posing in unnatural-looking formations inside their abodes and baring their teeth at the image-capturing device, often in front of a conifer, which are not usually found within human abodes.  Our working hypothesis is that bringing a large conifer into one's abode is a feat not all family groups can accomplish, so they bare their teeth in a display of dominance and document their superiority as a family unit.  We have many more images from additional storage devices that have yet to be decoded, so when we publish we may have a better hypothesis to explain this confusing behavior.
