--- a/_posts/2022-05-11-large.md
+++ b/_posts/2022-05-11-large.md
@@ -34,7 +34,7 @@ Lessemsaurids, named after author, paleontologist, and animatronics builder Don 
 
 Note: When I say "probably looked like," I mean that while *Melanorosaurus* is almost certainly not the direct ancestor of all sauropods, it is very closely related to that ancestor and is therefore likely similar to it. The ancestor of sauropods probably shared traits with *Melanorosaurus* like teeth suited for omnivory, medium body size (for a dinosaur), a medium-long neck, and a quadrupedal gait.  That means that any adaptations shared by its descendants that *Melanorosaurus* did *not* share must have been evolved independently.
 
-Lessemsauridae includes the huge quadrupeds *Lessemsaurus* (estimated at seven tonnes), *Antetonitrus* (a modest two tonnes), *Ingentia* (possibly up to nine tonnes), and the newest edition, the 2018-described giant *Ledumahadi* (twelve tonnes). It may also include the lighter-built, bipedal *Kholumolumo* and *Meroktenos*, which, if it ends up being true, provide examples of some members of this group retaining ancestral characteristics.
+Lessemsauridae includes the huge quadrupeds *Lessemsaurus* (estimated at seven tonnes), *Antetonitrus* (a modest two tonnes), *Ingentia* (possibly up to nine tonnes), and the newest addition, the 2018-described giant *Ledumahadi* (twelve tonnes). It may also include the lighter-built, bipedal *Kholumolumo* and *Meroktenos*, which, if it ends up being true, provide examples of some members of this group retaining ancestral characteristics.
 
 ![kholumolumo](/assets/images/posts/kholumolumo.jpg)
 
@@ -48,7 +48,7 @@ Above: *Ledumahadi*, whose name means "giant thunderclap at dawn".
 
 Lessemsaurids have always appeared to me to share similarities with bad paleoart of gravisaurian sauropods. Many of the [mistakes that are common in media depictions of sauropods](https://obscuredinosaurfacts.com/blog/post/2019/09/25/portrayals.html), such as visible front toes, bent, non-columnar elbows, and plantigrade stance in front and digitigrade in back like a dog, are actual traits that lessemsaurids had in real life. If movies would stop calling things "*Apatosaurus*" and ["*Brontosaurus*"](https://obscuredinosaurfacts.com/blog/post/2019/08/31/brontosaurus-isnt-real.html), maybe paleo nerds could pacify themselves by labeling them undescribed lessemsaurids.
 
-Sauropods were some of the earliest dinosaurs to find widespread success. In the Early Jurassic, theropods, or meat-eating dinosaurs, were just beginning to reach apex predator status with animals like the horse-sized *Dilophosaurus* (much larger than the one in Jurassic Park), having previously taken a backseat to terrestrial croc relatives during most of the Triassic. And none of the famous ornithischian plant-eating dinosaur groups had arisen yet; ceratopsians (horn-faced dinosaurs like *Triceratops*), pachycephalosaurs (dome-headed dinosaurs), and hadrosaurs (duck-billed dinosaurs) would not appear until the Cretaceous, 50 million years after *Ledumahadi* went extinct.  The first ornithischians to show up would be the stegosaurs, in the Middle Jurassic, but during the reign of the lessemsaurids, the ancestors of stegosaurs were still tiny, 10-kilogram bipeds like *Scutellosaurus*.
+Sauropods were some of the earliest dinosaurs to find widespread success. In the Early Jurassic, theropods, or meat-eating dinosaurs, were just beginning to reach apex predator status with animals like the horse-sized *Dilophosaurus* (much larger than the one in Jurassic Park), having previously taken a backseat to terrestrial croc relatives during most of the Triassic. And none of the famous ornithischian plant-eating dinosaur groups had arisen yet; ceratopsians (horn-faced dinosaurs like *Triceratops*), pachycephalosaurs (dome-headed dinosaurs), and hadrosaurs (duck-billed dinosaurs) would not appear until the Cretaceous, 50 million years after *Ledumahadi* went extinct.  The first ornithischians to achieve large sizes would be the stegosaurs, in the Middle Jurassic, but during the reign of the lessemsaurids, the ancestors of stegosaurs were still tiny, 10-kilogram bipeds like *Scutellosaurus*.
 
 It may have been that it was the lessemsaurids' lack of weight-bearing adaptations that caused their downfall. Gravisaurian sauropods, with their specialized columnar limbs, had a much larger ceiling on how big they could get, and gravisaurians at comparable sizes to lessemsaurids may have been simply better at moving around. It's a recurring phenomenon that after a mass extinction takes out the previous ecosystem's large-bodied animals, the ones that achieve large sizes first after the extinction do so by being hasty, and are later replaced by animals with a more comprehensive suite of adaptations. Other examples include the uintatheres and pantodonts, which rushed to fill large-herbivore niches after the extinction of the non-avian dinosaurs, but were later replaced by rhinos and bears, respectively.
 
