--- a/_posts/2022-12-29-photo10.md
+++ b/_posts/2022-12-29-photo10.md
@@ -6,8 +6,6 @@ date:   2022-12-29 00:10:08 -0700
 categories: post
 featured_image_thumbnail:
 featured_image: /assets/images/posts/tricolored-1.jpg
-featured: true
-hidden: true
 ---
 
 I'm visiting in-laws in Florida for the holidays, and unlike last time I was here, which was migration season, it's now the dry season, which brings a host of different birds. The family lives very close to a nature preserve, which is super convenient for me--just walk out the door, and there are the birds!
@@ -144,7 +142,7 @@ This is a Blue-Gray Gnatcatcher, which I saw last time I was in Florida but were
 
 ![boat-tailed](/assets/images/posts/grackle-4.jpg)
 
-This is a Boat-Tailed Grackles, another species I saw the last time I was in Florida.
+This is a Boat-Tailed Grackle, another species I saw the last time I was in Florida.
 
 ![grackle-and-heron](/assets/images/posts/grackle-and-heron.jpg)
 
