--- a/_posts/2022-03-30-cookbook.md
+++ b/_posts/2022-03-30-cookbook.md
@@ -25,7 +25,7 @@ While this particular method is impractical for a couple reasons, it was quite a
 I really enjoyed making these, but I think I'd need about 20 to justify turning them into a book, and I've exhausted most of my good ideas already. Other options I considered were
 
 - *Stethacanthus* fin soup - A small shark from the Devonian with a strange, brushlike dorsal fin that I thought would make a cool garnish. But when I Googled 'shark fin soup recipe' every recipe poster was getting violently attacked by righteous vegetarians. Since I met with a little bit of righteous vegetarianism even with the above examples, I thought best to steer clear of this one.
-- *Prionosuchus* legs - a croc-sized Permian amphibian whose preparation would probably be a cross between cleaning a frog and an alligator. There's not nearly as much detailed anatomical information available online for croc butchery, or *Prionosuchus* musculature, as their is for cows and *Edmontosaurus*.
+- *Prionosuchus* legs - a croc-sized Permian amphibian whose preparation would probably be a cross between cleaning a frog and an alligator. There's not nearly as much detailed anatomical information available online for croc butchery, or *Prionosuchus* musculature, as there is for cows and *Edmontosaurus*.
 - Boiled *Arthropleura* feed - this one I might still do. *Arthropleura* was a giant millipede from the Carboniferous that was the largest known terrestrial arthropod. How would one cook it? By rolling it up into a pan like a scroll? Or by dragging it through a pot a little at a time?
 - *Placerias* mutton, *Diictodon* spit roast - These are Permo-Triassic dicynodonts (roly-poly relatives of mammals). *Placerias* was hippo-sized, while *Diictodon* was more like a guinea pig. While they would probably be tasty, I didn't feel like there was enough content for an infographic.
 - *Leedsichthys* sashimi - the largest non-tetrapod fish to ever live, this Jurassic whale-sized filter-feeder would've made a great centerpiece at an extravagant party. However, it would just be like a scaled-up swordfish, which doesn't seem interesting enough for an infographic.
