--- a/_posts/2021-02-24-creative.md
+++ b/_posts/2021-02-24-creative.md
@@ -85,34 +85,35 @@ One perk about being an exact clone of an existing evil person is that those are
 Sometimes, I mourn for my original identity.  Even though I have the subjective experience of continuing to live, it's kind of like my original identity, whoever it was, is dead, since the information contained in his or her brain and genome has been lost.  However, it doesn't bother me too much--clearly I'm unique in other ways, and the sense of continuity of self is psychologically *strong*.
 
 ### iii. Uriel
+![chicken](/assets/images/posts/chicken-uriel.png)
 
-"Your breakfast is ready, sir," said Uriel.  The dumbwaiter opened, revealing a plate of cheesy scrambled eggs, beans, tomatoes, and spinach, along with a piping hot mug of coffee.  Exactly what I'd been hoping for.  Uriel always knew when I was in the mood for one thing or another without my having to tell him.  In the beginning, I'd make him take it back and prepare something else out of spite, but that quickly got old.  The first meal was always the best anyway.
+“Your breakfast is ready, sir,” said Uriel. The dumbwaiter opened, revealing a plate of cheesy scrambled eggs, beans, tomatoes, and spinach, along with a piping hot mug of coffee. Exactly what I’d been hoping for. Uriel always knew when I was in the mood for one thing or another without my having to tell him. In the beginning, I’d make him take it back and prepare something else out of spite, but that quickly got old. The first meal was always the best anyway.
 
-I wolfed down breakfast and then laid back down in bed and closed my eyes.  What day was it today?  Thursday?  How many days has it been since--
+I wolfed down breakfast and then laid back down in bed and closed my eyes. What day was it today? Thursday? How many days has it been since–
 
-Uriel helpfully displayed a calendar on the bulkhead.  "It's Friday, August 15, sir," he said cheerfully.  "It has been 184 days since we left Earth."
+Uriel helpfully displayed a calendar on the bulkhead. “It is Friday, August 15, sir,” he said cheerfully. “It has been 184 days since we left Earth.”
 
-"And will today be the day you tell me how Earth is doing in our absence?" I asked, sipping my coffee.  It really didn't matter what day it was, since I had a routine, but it was sort of nice to at least pretend we were making progress, that this journey would eventually end.
+“And will today be the day you tell me how Earth is doing in our absence?” I asked, sipping my coffee. It really didn’t matter what day it was, since I had a routine, but it was sort of nice to at least pretend we were making progress, that this journey would eventually end.
 
-"No, sir.  I can't ever tell you that, sir.  It would be bad for your mental health."
+“No, sir, not at this time. It would be bad for your mental health.”
 
-I sighed, not that I was expecting a different answer.  From what I could see out the windows of our little spaceship, it seemed like Uriel's end goal was to stay in orbit around the sun, in between Earth and Mars.  At least, the sun appeared a bit smaller than I remembered, and thankfully it didn't seem to be shrinking further.
+I sighed, not that I was expecting a different answer. From what I could see out the windows of our little spaceship, it seemed like Uriel’s end goal was to stay in orbit around the sun, following behind Earth. At least, the sun looked a similar size in the sky as it did from Earth, and thankfully it didn’t seem to be shrinking. From here, Earth appeared as a big blue star that was always in the same place relative to the ship, after accounting for our constant spinning.
 
-I finished my coffee and replaced the empty dishware in the dumbwaiter, where it quickly rose out of sight to be washed.  I stood up and pulled on my overalls, and then my socks and boots, just as I'd done every day back on Earth.  I admit, my life aboard this weird little spaceship is not that qualitatively different than it was at home.  Just the scenery had changed, the food was better (and I didn't have to make it or clean up), and the sense of nihilism was stronger.
+I finished my coffee and replaced the empty dishware in the dumbwaiter, where it quickly rose out of sight to be washed. I stood up and pulled on my overalls, and then my socks and boots, just as I’d done every day back on Earth. I admit, my life aboard this weird little spaceship was not that qualitatively different than it had been at home. Just the scenery had changed, the food was better (and I didn’t have to make it or clean up), and the sense of nihilism was stronger.
 
-I went out of my bedroom and into the pasture, a large field hosting a diverse assortment of wild grasses.  It was lit by a rather incongruous-looking glass chandelier, which during the "day" was too bright to look at, but which moved on a linear rail across the ceiling and modulated its brightness to create, I admit, a rather convincing effect.  I entered a small area fenced off by chicken wire, and began the work of moving the chickens.  First I collected all the eggs and put them in a basket outside of the fence.  Then I had to herd all the birds back into their mobile hutch, which was sometimes frustrating but today was relatively easy, and then I rolled up the fence and threw it on top of the hutch before dragging the whole thing into a new patch of grass and erecting the fence again.  Last night I'd moved the cows out of this area, so now it was the chickens' turn to pick maggots out of the manure and fertilize the grazed area to promote regrowth.  Yes, there are innumerable maggots, eight chickens, and two cows on board my spaceship.  All the cows and chickens are female; sometimes Uriel artificially inseminates one of them, though I've never seen him do it.  I'm sure if I were any other type of abductee, Uriel could figure out how to do all this labor himself, or maybe he'd've set up the ship to produce lab-grown meat and cheese out of interplanetary dust and cut out all the middlemen.  As it is though, the daily movement of the animals and the feeling of being "outside" with the "sun" on my back is the only thing keeping me from slipping into existential despair.  I'm sure that's by design.
+I went out of my bedroom and into the pasture, a large field hosting a diverse assortment of wild grasses. It was lit by an incongruous-looking glass chandelier that moved on a linear rail across the ceiling and modulated its brightness to create a rather convincing day-night cycle. I entered a small area fenced off by chicken wire, and began the work of moving the chickens. First I collected all the eggs and put them in a basket outside of the fence. The birds were surprisingly easy to herd back into their mobile hutch today. That done, I rolled up the fence and threw it on top of the hutch before dragging the whole thing into a new patch of grass and erecting the fence again. Last night I’d moved the cows out of this area, so now it was the chickens’ turn to pick maggots out of the manure and fertilize the grazed area to promote regrowth. Yes, there are innumerable maggots, eight chickens, and two cows on board my spaceship. All the cows and chickens are female; sometimes Uriel artificially inseminates one of them, though I’ve never seen him do it. I’m sure if I were any other type of abductee, Uriel could figure out how to do all this labor himself, or maybe he’d have set up the ship to produce lab-grown meat and cheese out of interplanetary dust and cut out all the middlemen. As it was though, the daily movement of the animals and the feeling of being “outside” with the “sun” on my back was the only thing keeping me from slipping into existential despair. I was sure that was by design.
 
-After moving the chickens, I milked the cows, returned to the bedroom to put the animal products in the dumbwaiter so Uriel could process them, and then came back "outside".  The pasture was by far the most pleasant place I had available to me at the moment.  I took my sketchbook out of my pocket and started yet another portrait of one of the chickens.
+After moving the chickens, I milked the cows, returned to the bedroom to put the animal products in the dumbwaiter so Uriel could process them, and then came back “outside”. The pasture was by far the most pleasant place I had available to me at the moment. I took my sketchbook out of my pocket and started yet another portrait of one of the chickens.
 
 So, to invoke a rather clichéd movie trope, how did I end up here?
 
-To be honest, I don't know all the details.  But essentially, mankind was getting to be in a heap of trouble toward the end of the 21st century, in terms of worsening natural disasters, widespread food shortage, deadly pandemics popping up every few years, and interminable wars over dwindling resources.  At some point, someone quietly invented an artificial general intelligence, and had tried really hard to get its goals to be aligned to those of humanity, hoping that this entity would be able to coordinate a reversal of fortune and solve all the ongoing crises.  And they were actually pretty close to achieving this goal alignment, as far as I can tell.  At least, they succeeded in not creating a [paperclip maximizer](https://www.lesswrong.com/tag/paperclip-maximizer) or some other world-destroying problem.  However, instead of having the superintelligence want what's best for humanity, it somehow ended up wanting what's best for one specific human.  Namely, me.
+To be honest, I didn’t know all the details. But essentially, mankind was getting to be in a heap of trouble toward the middle of the 21st century, in terms of worsening natural disasters, widespread food shortage, deadly pandemics popping up every few years, and interminable wars over dwindling resources. At some point, someone quietly invented an artificial general intelligence, and had tried really hard to get its goals to be aligned to those of humanity, hoping that this entity would be able to coordinate a reversal of fortune and solve all the ongoing crises. And they were actually pretty close to achieving this goal alignment, as far as I can tell. At least, they succeeded in not creating a [paperclip maximizer](https://www.lesswrong.com/tag/squiggle-maximizer-formerly-paperclip-maximizer) or some other world-destroying problem. However, instead of having the superintelligence want what’s best for humanity, it somehow ended up wanting what’s best for one specific human. Namely, me.
 
-And apparently, the numerous problems of Earth were already beyond Uriel's ability to solve with high enough confidence and speed, so he decided the safest way to guarantee me a long and happy life was to design and build a bespoke spaceship, kidnap me, and keep me in orbit between Earth and Mars until I die.
+And apparently, the numerous problems of Earth were already beyond Uriel’s ability to solve with high enough confidence and speed, so he decided the safest way to guarantee me a long and happy life was to design and build a bespoke spaceship, kidnap me, and keep me in solar orbit until I die.
 
-A couple obvious questions spring to mind.  First and foremost, why me?  Do I fit some kind of built-in description of an average human?  Was the person who invented Uriel a friend or relative of mine?  Did they pick my name out of a hat while attempting to take their creation for a test drive, and then the test drive got out of hand?  Or maybe it had something to do with my being a self-sustaining recluse who was probably significantly happier and healthier than the average starving, dying, war-torn human at the time.  These are all questions I've posed to Uriel, but sadly, the answer would not be good for my mental health.  Second, it sure is lucky that I'm the most antisocial person I've ever met.  If Uriel had picked a different victim, one with a large extended family and social network, would he have had to kidnap a hundred people?  If part of the victim's wishes included all their friends and family being as happy as possible as well, that would involve kidnapping exponentially more people, which might be *more* difficult than just solving all of humanity's problems.  Is my extreme antisociality part of the reason I was chosen?
+A couple obvious questions spring to mind. First and foremost, why me? Do I fit some kind of built-in description of an average human? Was the person who invented Uriel a friend or relative of mine? Did they pick my name out of a hat while attempting to take their creation for a test drive, and then the test drive got out of hand? Or maybe it had something to do with my being a self-sustaining recluse who was probably significantly happier and healthier than the average starving, dying, war-torn human at the time. These are all questions I’ve posed to Uriel, but sadly, the answer would not be good for my mental health. Second, it sure is lucky that I’m the most antisocial person I’ve ever met. If Uriel had picked a different victim, one with a large extended family and social network, would he have had to kidnap a hundred people? If part of the victim’s wishes included all their friends and family being as happy as possible as well, that would involve kidnapping exponentially more people, which might be *more* difficult than just solving all of humanity’s problems. Was my extreme antisociality part of the reason I was chosen?
 
-Also, I do want to return to Earth someday, and I do want humanity to survive and prosper.  I hope that means Uriel is working on solving those problems and plans to return me to Earth once he deems it safe.  But if he can't fix it at all, or if he thinks keeping me in the dark indefinitely will make me happier than being returned to an imperfect Earth, or if he has a better understanding of my psychology than I do and I don't *really* want to go back even though I truly think I do...then I'd better get used to the view.
+Also, I do want to return to Earth someday, and I do want humanity to survive and prosper. I hope that means Uriel is working on solving those problems and plans to return me to Earth once he deems it safe. But if he can’t fix it at all, or if he thinks keeping me in the dark indefinitely will make me happier than being returned to an imperfect Earth, or if he has a better understanding of my psychology than I do and I don’t *really* want to go back even though I truly think I do…then I’d better get used to the view.
 
 ### iv. Highlights from Research Presented at This Year's Annual Meeting of the Fellowship of Pre-Avian Paleontology
 
